2009-02-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Do not show notification previews if in switcher. Fixes: NB#99892.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Delete preview
	windows if in switcher.

	* debian/changelog: Update.

2009-02-03  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	New and improved HdAppMgr for NB#98239.

	* src/home/hd-render-manager.c: Added a property 'state', now changes
	in state can be tracked with a signal.
	* src/home/hd-render-manager.h:
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-app-mgr.h:
	* src/launcher/hd-launcher-app.c: Removed debugging output.
	* src/launcher/hd-launcher.c: Moved prestarting to HdAppMgr.
	* src/mb/hd-comp-mgr.c: Moved low memory management to HdAppMgr.
	* src/mb/hd-comp-mgr.h:
	* src/util/hd-dbus.c: Removed memory signals.

2009-02-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Added new D-BUS signal com.nokia.hildon_desktop.exit_app_view for RR
	to be able to switch to task switching view.  The signal has no effect
	if sent in non-application view.

	* src/home/hd-switcher.h
	* src/mb/hd-comp-mgr.c:
	  Removed some obsoleted definitions and declarations.
	* src/util/hd-dbus.c:
	  Signal handler added.

2009-02-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Made window hibernation and hibernated window selection
	in switcher view usable.

	* src/home/hd-task-navigator.c:
	  Resurrect hd_task_navigator_hibernate_window().
	  Removed support for hibernated window decoration.
	* src/home/hd-switcher.c (hd_switcher_zoom_in_complete):
	  Crashed when the selected thumbnail belonged to a now
	  hibernated client.
	* src/launcher/hd-app-mgr.c (hd_app_mgr_service_top):
	  Thinko correction: dbus_message_append_args() takes pointers
	  to arguments, even if the argument is a pointer itself.

2009-02-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.18

2009-02-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.h: